<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/profile_pic_holder"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:border_color="@color/colorPrimaryLight"
                    app:border_width="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/unisex" />

                <ImageView
                    android:id="@+id/pick_image_btn"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/upload_button"
                    android:src="@drawable/camera_icon"
                    android:visibility="visible" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_firstname"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences|textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/middlename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_middlename"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences|textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_lastname"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences|textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_email"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_phone"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorGrayDark"
                    android:text="@string/gender"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/gender"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gender"
                    tools:entries="@array/genderType"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/error_invalid_address"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/save_btn"
                style="@style/button_style_info"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>