<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_name"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/farm_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_farm_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapSentences|text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_location"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/farm_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="5"
                    android:imeActionLabel="@string/error_invalid_farm_location"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_coordinates_latitude_longitude"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/farm_coordinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/error_invalid_coordinates"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/retrieve_automatically"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_automatically"
                style="@style/text_view_link_style"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="12sp" />


            <Button
                android:id="@+id/save_btn"
                style="@style/button_style_info"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>