<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    style="@style/layout_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/farmer_picture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:layout_marginEnd="10dp"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.1"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/farmer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/farmer_name"
                android:textColor="@color/colorGrayDark"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/farmer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/farmer_email"
                android:textSize="13sp"
                android:textColor="@color/colorGrayLight"
                android:ellipsize="end"
                android:maxLines="1" />

            <TextView
                android:id="@+id/farmer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/farmer_phone"
                android:textSize="13sp"
                android:textColor="@color/colorGrayLight"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>


        <ImageView
            android:id="@+id/option_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".3"
            android:src="@drawable/baseline_more_vert_black_18dp"
            android:contentDescription="@string/image" />

    </LinearLayout>

</RelativeLayout>