<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight" />

    <View
        android:background="@drawable/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/login_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-50dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="60dp"
                style="@style/layout_style">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="2"
                        android:imeActionLabel="@string/error_invalid_email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:ignore="Autofill,LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:ignore="Autofill,LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/button_style"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:text="@string/action_sign_in"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/login_logo"
                android:layout_width="102dp"
                android:layout_height="102dp"
                app:border_color="@color/colorGrayLightExtra"
                app:border_width="6dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
